--- a/app.json
+++ b/app.json
@@ -20,10 +20,19 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "package": "com.fazil.carbeezmobile",
       "edgeToEdgeEnabled": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "f0045a1f-2e6e-464a-8bed-6326d7e9f6d8"
+      }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
