--- a/package.json
+++ b/package.json
@@ -4,16 +4,30 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --host lan",
+    "start:clear": "expo start --host lan -c",
+    "start:tunnel": "expo start --tunnel",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.20",
+    "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.0.0",
+    "@google/generative-ai": "^0.7.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "expo": "^53.0.20",
+    "expo-clipboard": "~7.1.5",
+    "expo-font": "~13.3.2",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-markdown-display": "^7.0.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-web": "^0.20.0",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
