--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.1.0",
     "@google/generative-ai": "^0.7.1",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.7",
     "expo": "^53.0.20",
     "expo-clipboard": "~7.1.5",
     "expo-font": "~13.3.2",
@@ -23,9 +26,12 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-modal": "^13.0.1",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
     "styled-components": "^6.1.11"
   },
