--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
     "expo": "^53.0.20",
+    "expo-blur": "^14.1.5",
     "expo-clipboard": "~7.1.5",
     "expo-font": "~13.3.2",
     "expo-status-bar": "~2.2.3",
