--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-blur": "^14.1.5",
     "expo-clipboard": "~7.1.5",
     "expo-font": "~13.3.2",
+    "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
