--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-haptics": "^14.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
+    "nodemailer": "^7.0.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
@@ -33,8 +34,10 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-markdown-display": "^7.0.2",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "^0.20.0",
     "styled-components": "^6.1.11"
   },
