--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-markdown-display": "^7.0.2",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-reanimated": "^4.0.2",
+    "react-native-reanimated": "^3.19.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "^0.20.0",
+    "react-native-worklets": "^0.4.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
