--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_KEY =AIzaSyCZfsdsdrFrVfBKgyir1rBQOk_Bh-jNZV0
-REACT_NATIVE_PACKAGER_HOSTNAME = 192.168.0.225
+API_KEY=AIzaSyDCoYyPhHfdVZro58R4blXAmPtSyCeUmEY
+REACT_NATIVE_PACKAGER_HOSTNAME= 192.168.0.225
 EMAIL_USER=greonxpert@gmail.com
 EMAIL_PASS=afedcqpmtotaghet
