--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
+    "dotenv": "^17.2.1",
     "expo": "^53.0.20",
     "expo-blur": "^14.1.5",
     "expo-clipboard": "~7.1.5",
