--- a/app.json
+++ b/app.json
@@ -13,7 +13,10 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSMicrophoneUsageDescription": "This app uses the microphone to allow you to send voice messages."
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -23,10 +26,14 @@
       "package": "com.fazil.carbeezmobile",
       "edgeToEdgeEnabled": true
     },
+     "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ],
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "extra": {
+      
       "eas": {
         "projectId": "f0045a1f-2e6e-464a-8bed-6326d7e9f6d8"
       }
