--- a/package.json
+++ b/package.json
@@ -15,28 +15,39 @@
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@google/generative-ai": "^0.7.1",
+    "@kaannn/react-native-waveform": "^0.1.4",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
+    "dotenv": "^17.2.1",
     "expo": "^53.0.20",
+    "expo-av": "~15.1.7",
     "expo-blur": "^14.1.5",
     "expo-clipboard": "~7.1.5",
+    "expo-constants": "^17.1.7",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "^14.1.4",
     "expo-linear-gradient": "^14.1.5",
+    "expo-speech": "~13.1.7",
     "expo-status-bar": "~2.2.3",
     "nodemailer": "^7.0.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-audio-recorder-player": "^4.3.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-markdown-display": "^7.0.2",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "^3.19.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.1",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "^0.20.0",
     "react-native-worklets": "^0.4.1",
