--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 API_KEY=AIzaSyACkAdrraS-mhetev0yd94uFVQE5WexZPg
-REACT_NATIVE_PACKAGER_HOSTNAME= 192.168.0.225
+REACT_NATIVE_PACKAGER_HOSTNAME=192.168.0.225
 EMAIL_USER=greonxpert@gmail.com
 EMAIL_PASS=afedcqpmtotaghet
