--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
     "dotenv": "^17.2.1",
-    "expo": "^53.0.20",
+    "expo": "53.0.22",
     "expo-av": "~15.1.7",
-    "expo-blur": "^14.1.5",
+    "expo-blur": "~14.1.5",
     "expo-clipboard": "~7.1.5",
-    "expo-constants": "^17.1.7",
+    "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
-    "expo-haptics": "^14.1.4",
-    "expo-linear-gradient": "^14.1.5",
+    "expo-haptics": "~14.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-speech": "~13.1.7",
     "expo-status-bar": "~2.2.3",
     "nodemailer": "^7.0.5",
@@ -39,22 +39,25 @@
     "react-native": "0.79.5",
     "react-native-audio-recorder-player": "^4.3.0",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.28.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-markdown-display": "^7.0.2",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-permissions": "^5.4.2",
-    "react-native-reanimated": "^3.19.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "15.11.2",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "^0.20.0",
     "react-native-worklets": "^0.4.1",
     "styled-components": "^6.1.11"
   },
+
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@expo/config-plugins": "~10.1.2",
+    "@expo/metro-config": "~0.20.0"
   },
   "private": true
 }
