--- a/app.json
+++ b/app.json
@@ -24,22 +24,27 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.fazil.carbeezmobile",
-      "edgeToEdgeEnabled": true
-    },
-     "permissions": [
+      "edgeToEdgeEnabled": true,
+      "permissions": [
         "android.permission.RECORD_AUDIO"
-      ],
+      ]
+    },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "extra": {
-      
       "eas": {
         "projectId": "f0045a1f-2e6e-464a-8bed-6326d7e9f6d8"
       }
     },
     "plugins": [
-      "expo-font"
+      "expo-font",
+      [
+        "expo-audio",
+        {
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone for voice messages."
+        }
+      ]
     ]
   }
 }
