--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@react-navigation/stack": "^7.4.7",
     "dotenv": "^17.2.1",
     "expo": "53.0.22",
+    "expo-audio": "^0.4.8",
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
+    "expo-file-system": "~18.1.3",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "~14.1.5",
@@ -53,7 +55,6 @@
     "react-native-worklets": "^0.4.1",
     "styled-components": "^6.1.11"
   },
-
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@expo/config-plugins": "~10.1.2",
