--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-speech": "~13.1.7",
+    "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
     "nodemailer": "^7.0.5",
     "react": "19.0.0",
