--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "^0.20.0",
     "react-native-worklets": "^0.4.1",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
